[package]
name = "leptos-portfolio-admin"
version = "0.1.1"
edition = "2021"
authors = ["Thanon Aphithanawat(Hero) <thanon@aphithanawat.me>"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
http = { version = "1.0.0", optional = true }
leptos = { version = "0.6", features = ["nightly" ] }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_actix = { version = "0.6", optional = true }
leptos_router = { version = "0.6", features = ["nightly"] }
wasm-bindgen = "=0.2.100"
serde = { version = "1.0", features = ["derive"] }
surrealdb = { version = "2.6",   features = [ "protocol-http", "protocol-ws"] , optional = true   }
cfg-if = "1.0.0"
once_cell = "1.20"
chrono = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlButtonElement",
    "console",
]}
dotenvy = "0.15"
serde_json = "1.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
icondata = "0.5.0"
leptos_icons = "0.3"
phf = { version = "0.11", features = ["macros"] }
icondata_core = "0.1"
leptos_toaster = { version = "0.1"  , features = ["builtin_toast"] } 
base64 = "0.22"
fast_qr = { version = "0.12", features = ["image"], optional = true }
image = { version = "0.24", default-features = false, features = ["png"], optional = true } 
redis = { version = "0.29", features = ["tokio-comp"], optional = true }
# The dependencies for password hashing are used only in src/bin/, so they won't increase the WASM bundle size.
argon2 =  "0.5"
password-hash = { version = "0.5", features = ["rand_core", "std"] }
rand_core = { version = "0.6", features = ["getrandom", "std"] }
rpassword = "7.3"
subtle =  { version = "2.6.1", optional = true }

[dependencies.uuid]
version = "1.15.1"
features = ["v4", "rng-getrandom"]

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate","leptos_toaster/hydrate"]
ssr = [
  "dep:actix-files",
  "dep:actix-web",
  "dep:leptos_actix",
  "dep:surrealdb",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos_toaster/ssr",
  "dep:fast_qr",        
  "dep:image",
  "dep:redis", 
  "dep:subtle"
]
 
[profile.release]
lto = true          # Link Time Optimization
codegen-units = 1   # Better optimization
opt-level = 's'     # Optimize for size
panic = 'abort'     # Remove panic infrastructure
incremental = false # Better optimization

[profile.wasm-release]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"

[package.metadata.leptos]
output-name = "leptos-portfolio-admin"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
env = "DEV"
bin-target = "leptos-portfolio-admin"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
